# CS4341-referee

./: .gitignore  .pre-commit-config.yaml  LLM.py  README.md  aarondebug.txt  flake.nix  junit.xml  lasker_morris_ai.py  log.txt  opponent_moves.txt  pyproject.toml  randomdebug.txt  run.txt  tictactoe_ai.py
.github/workflows/: build.yml
docs/: PROTOCOL.md  checking-git.md  checking-pip.md  checking-python-version.md  temp.md
src/: main.py
src/cli/: commands.py  parser.py
src/config/: constants.py  lasker_settings.py  tictactoe_settings.py
src/game/: __init__.py
src/game/abstract/: __init__.py  player.py
src/game/abstract/web/: web_game.py
src/game/implementation/lasker_morris/: lasker_morris.py  lasker_player.py
src/game/implementation/lasker_morris/web/: lasker_web.py
src/game/implementation/tictactoe/: tictactoe.py  tictactoe_player.py
src/game/implementation/tictactoe/web/: tictactoe_web.py
src/web/lasker_morris/: index.html
src/web/templates/lasker_morris/: index.html
src/web/templates/tictactoe/: index.html
src/web/tictactoe/: index.html
tests/: test_referee.py
tests/game/: test_abstract.py  test_lasker.py  test_tictactoe.py
