[tool.poetry]
name = "cs4341-referee"
version = "0.1.2"
description = "A referee program designed for a Artificial Integence class taught at WPI"
authors = ["Jacob Molnia <jrmolnia@wpi.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pywin32 = {version = "^305", platform = "win32"}
click = "^8.1.8"
colorama = "^0.4.6"
toml = "^0.10.2"
flask = "^3.1.0"
flask-cors = "^5.0.0"
waitress = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"
pre-commit = "^3.0"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
cs4341-referee = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q --cov=src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
